<resources>
    <string name="app_name">Калькулятор</string>
    <string name="app_setting">Настройки</string>

    <!-- кнопки калькулятора -->
    <string name="button_zero">0</string>
    <string name="button_one">1</string>
    <string name="button_two">2</string>
    <string name="button_three">3</string>
    <string name="button_four">4</string>
    <string name="button_five">5</string>
    <string name="button_sex">6</string>
    <string name="button_seven">7</string>
    <string name="button_eight">8</string>
    <string name="button_nine">9</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_multiply">*</string>
    <string name="button_divide">÷</string>
    <string name="button_percent">%</string>
    <string name="button_total">=</string>
    <string name="button_clear">C</string>
    <string name="button_point">.</string>

    <string name="menu_setting">Настройки</string>
    <string name="dark_theme_enabled">Темная тема приложения</string>
</resources>
